--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url= jdbc:postgresql://localhost:5432/storiesberries
 spring.datasource.username=postgres
 spring.datasource.password=postgres
